attached_assets/Pasted-2025-04-30T18-40-54Z-info-Deployment-7d9e0708-6ce8-4064-87f9-d934a2f9439f-2025-04-30T18-40-54Z-inf-1746038488755.txt
2025-04-30T18:40:54Z info: Deployment: 7d9e0708-6ce8-4064-87f9-d934a2f9439f
2025-04-30T18:40:54Z info: Build: d06dd32e-abd7-42f3-b5c6-f03dbfa11c05
2025-04-30T18:40:54Z info: Connecting to builder
2025-04-30T18:40:58Z info: Builder connected
2025-04-30T18:40:59Z info: Installing packages
--> npm install


added 1 package, changed 1 package, and audited 349 packages in 3s

  run `npm fund` for details


13 vulnerabilities (4 low, 3 moderate, 6 high)

To address issues that do not require attention, run:
  npm audit fix

To address all issues (including breaking changes), run:
  npm audit fix --force

Run `npm audit` for details.

npm notice
npm notice New major version of npm available! 10.8.2 -> 11.3.0
npm notice Changelog: https://github.com/npm/cli/releases/tag/v11.3.0
npm notice To update run: npm install -g npm@11.3.0
npm notice

2025-04-30T18:41:02Z info: Starting Build

> pawaodds-scraper@1.0.0 build
> vite build --config vite.config.cjs && mkdir -p dist/public


The CJS build of Vite's Node API is deprecated. See https://vitejs.dev/guide/troubleshooting.html#vite-cjs-node-api-deprecated for more details.

vite v5.0.2 building for production...

(node:74) [DEP0128] DeprecationWarning: Invalid 'main' field in '/home/runner/workspace/node_modules/dlv/package.json' of 'dist/dlv.js'. Please either fix that or report it to the module author
(Use `node --trace-deprecation ...` to show where the warning was created)

node:internal/process/promises:391
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: /home/runner/workspace/client): [Error] Loading PostCSS Plugin failed: Unexpected token 'export'

(@/home/runner/workspace/postcss.config.cjs)
Error: Loading PostCSS Plugin failed: Unexpected token 'export'

(@/home/runner/workspace/postcss.config.cjs)
    at load (file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-ErEj4WmL.js:35834:11)
    at file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-ErEj4WmL.js:35859:16
    at Array.map (<anonymous>)
    at plugins (file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-ErEj4WmL.js:35858:8)
    at processResult (file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-ErEj4WmL.js:35928:14)
    at file:///home/runner/workspace/node_modules/vite/dist/node/chunks/dep-ErEj4WmL.js:36057:14]

Node.js v20.18.1